kebernetes/manifest_grafana/grafana_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    # cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  tls:
  - hosts:
      - grafana.gre4ka.fun
    secretName: coffee-secret-tls
  ingressClassName: nginx
  rules:
  - host: grafana.gre4ka.fun
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-grafana
            port:
              number: 80
